# Hub3

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  HACKATHON_PLAN.md  PROJECT_CONTEXT.md  README.md  git3doc.md  package-lock.json  package.json  tsconfig.base.json
.hub3/: hub3.db
apps/api/: .env.example  drizzle.config.ts  package.json
apps/api/migrations/: 001_init.sql  002_repo_access_grants.sql  003_agent_wallets_and_policies.sql  004_agent_wallet_secrets.sql
apps/api/scripts/: irys-wallet.ts  migrate.ts
apps/api/src/: adapters.ts  auth.ts  config.ts  data.ts  db.ts  publish-service.ts  routes.ts  schema.ts  server.test.ts  server.ts  signer.ts  x402.ts
apps/signer/: package.json
apps/signer/src/: config.ts  server.ts
apps/web/: .env.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/repos/[repoId]/: page.tsx
apps/web/components/: dashboard-client.tsx
apps/web/features/auth/components/: github-connect-button.tsx  wallet-connect-button.tsx
apps/web/features/github-repos/components/: repo-card.tsx  repo-list.tsx
apps/web/lib/: api.ts  x402.ts
apps/web/providers/: providers.tsx
clients/ts/repo_registry/: package.json
clients/ts/repo_registry/src/: index.ts
idl/: repo_registry.json
programs/repo_registry/: Anchor.toml  Cargo.toml
programs/repo_registry/programs/repo_registry/: Cargo.toml
programs/repo_registry/programs/repo_registry/src/: lib.rs
programs/repo_registry/tests/: repo_registry.ts
(+7 files in other folders)
